[package]
name = "linz-port-webcam-scraper-rust"
version = "0.1.0"
authors = ["Dominik Mydlil <dominik.mydlil@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
chrono = "0.4"
chrono-tz = "0.5.1"
reqwest = "0.9.22"
